--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-styled-components": "^3.1.11",
+    "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.1",
+    "gsap": "^2.1.3",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.4.1",
+    "styled-icons": "^8.6.0",
     "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
