--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^2.1.3",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
