--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-link": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.25",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-react-helmet": "^3.1.13",
@@ -15,8 +16,10 @@
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-plugin-transition-link": "^1.16.2",
     "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-remark": "^2.6.33",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^2.1.3",
+    "lodash": "^4.17.15",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
