--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.17.6",
+    "gatsby": "^2.18.6",
+    "gatsby-cli": "^2.8.15",
     "gatsby-image": "^2.2.30",
     "gatsby-link": "^2.2.23",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -23,8 +24,8 @@
     "lodash": "^4.17.15",
     "polished": "^3.4.2",
     "prop-types": "^15.7.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.4.1",
     "styled-icons": "^8.6.0",
