--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-scroll-section": "^1.3.0",
     "styled-components": "^4.4.1",
     "styled-icons": "^8.6.0",
     "styled-media-query": "^2.1.2"
